[package]
name = "trichloride"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# fluffy is an abstraction over winit/softbuffer I use in things for gaze.
# I'm used to it, so I'm grabbing it here. Just need a little preview is all
# and opengl is hard.
fluffy = {  git = "https://github.com/eclecticnybles/gaze" }

# nearest neighbor image upscale/downscale.
neam = { git = "https://github.com/gennyble/neam" }

# video things, oh gosh
openh264 = { version = "0.4.0", default-features = false, features = ["encoder"] }
mp4 = "0.13.0"

# webcam library I'm quite fond of. It has it's bugs, but it's overally pretty
# nice to work with!
[dependencies.nokhwa]
version = "0.10.0"
# Use the native input backends
features = ["input-native"]
