[package]
name = "trichloride"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.24.1"

# nearest neighbor image upscale/downscale.
neam = { git = "https://github.com/gennyble/neam" }
# video crate :D
devout = { path = "devout" }

# webcam library I'm quite fond of. It has it's bugs, but it's overally pretty
# nice to work with!
[dependencies.nokhwa]
version = "0.10.0"
# Use the native input backends
features = ["input-native"]

[workspace]
members = ["devout"]
