[package]
name = "devout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openh264 = { version = "0.4.0", default-features = false, features = ["encoder"] }
mp4 = "0.13.0"
# I do not like Bytes, but Mp4 demands it
bytes = "1.4"
x264 = "0.5.0"
